--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,7 +31,7 @@ jobs:
         if: github.event_name == 'push'
         with:
           name: bootjar
-          path: build/libs/*.jar
+          path: bot/build/libs/*.jar
   docker:
     runs-on: ubuntu-latest
     needs: build
@@ -43,7 +43,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: bootjar
-          path: build/libs/
+          path: bot/build/libs/
       # Delete artifact
       - name: Delete artifacts
         uses: geekyeggo/delete-artifact@v1
@@ -51,7 +51,7 @@ jobs:
           name: bootjar
       # Build
       - name: Docker Build
-        run: docker build . --file Dockerfile --tag $IMAGE_NAME
+        run: docker build ./bot/ --file ./bot/Dockerfile --tag $IMAGE_NAME
       # Auth
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
