--- a/bot/build.gradle
+++ b/bot/build.gradle
@@ -41,9 +41,9 @@ bootJar {
 
 dependencies {
     implementation project(':module-automod')
+    implementation project(':module-economy')
 
     implementation('net.lindseybot:worker-nsfw:0.0.4')
-    implementation('net.lindseybot:worker-economy:0.0.3')
     implementation('net.lindseybot:worker-moderation:0.0.2')
     implementation('net.lindseybot:worker-fun:0.0.3')
     implementation('net.lindseybot:worker-info:0.0.4')
