--- a/bot/build.gradle
+++ b/bot/build.gradle
@@ -42,13 +42,13 @@ bootJar {
 dependencies {
     implementation project(':module-automod')
     implementation project(':module-economy')
+    implementation project(':module-fun')
+    implementation project(':module-help')
 
     implementation('net.lindseybot:worker-nsfw:0.0.4')
     implementation('net.lindseybot:worker-moderation:0.0.2')
-    implementation('net.lindseybot:worker-fun:0.0.3')
     implementation('net.lindseybot:worker-info:0.0.4')
     implementation('net.lindseybot:worker-wiki:0.0.2')
-    implementation('net.lindseybot:worker-help:0.0.4')
 
     // Dependencies
     implementation project(':common')
