--- a/bot/build.gradle
+++ b/bot/build.gradle
@@ -44,10 +44,10 @@ dependencies {
     implementation project(':module-economy')
     implementation project(':module-fun')
     implementation project(':module-help')
+    implementation project(':module-info')
 
     implementation('net.lindseybot:worker-nsfw:0.0.4')
     implementation('net.lindseybot:worker-moderation:0.0.2')
-    implementation('net.lindseybot:worker-info:0.0.4')
     implementation('net.lindseybot:worker-wiki:0.0.2')
 
     // Dependencies
