--- a/bot/build.gradle
+++ b/bot/build.gradle
@@ -45,9 +45,9 @@ dependencies {
     implementation project(':module-fun')
     implementation project(':module-help')
     implementation project(':module-info')
+    implementation project(':module-moderation')
 
     implementation('net.lindseybot:worker-nsfw:0.0.4')
-    implementation('net.lindseybot:worker-moderation:0.0.2')
     implementation('net.lindseybot:worker-wiki:0.0.2')
 
     // Dependencies
