--- a/bot/build.gradle
+++ b/bot/build.gradle
@@ -46,8 +46,8 @@ dependencies {
     implementation project(':module-help')
     implementation project(':module-info')
     implementation project(':module-moderation')
+    implementation project(':module-nsfw')
 
-    implementation('net.lindseybot:worker-nsfw:0.0.4')
     implementation('net.lindseybot:worker-wiki:0.0.2')
 
     // Dependencies
