Remove redundant dependencies

--- a/module-help/build.gradle
+++ b/module-help/build.gradle
@@ -42,8 +42,8 @@ dependencies {
     }
 
     // Spring
-    implementation('org.mariadb.jdbc:mariadb-java-client')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+    implementation('org.springframework.boot:spring-boot-starter')
 
     // Development
     testImplementation('org.springframework.boot:spring-boot-starter-test')
