--- a/bot/build.gradle
+++ b/bot/build.gradle
@@ -1,18 +1,13 @@
 plugins {
+    id 'java'
     id 'org.springframework.boot' version '2.5.3'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id 'java'
+    id 'io.freefair.lombok' version '6.1.0'
 }
 
 group = 'net.lindseybot'
-version = '0.0.1'
+version = rootProject.version
 sourceCompatibility = targetCompatibility = '17'
-
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
-}
 
 repositories {
     mavenLocal()
@@ -49,29 +44,20 @@ dependencies {
     implementation project(':module-nsfw')
     implementation project(':module-wiki')
 
-    // Dependencies
+    // Shared Dependencies
     implementation project(':common')
     implementation("net.dv8tion:JDA:${JDA_VERSION}") {
         exclude module: 'opus-java'
     }
-    implementation('net.jodah:expiringmap:0.5.10')
-    implementation('org.json:json:20190722')
-    implementation('com.squareup.okhttp3:okhttp:4.9.1')
-    implementation('com.fasterxml.jackson.core:jackson-databind:2.10.1')
+    implementation('com.fasterxml.jackson.core:jackson-databind:2.13.1')
 
     // Spring
+    implementation('redis.clients:jedis:3.6.0')
+    implementation('org.mariadb.jdbc:mariadb-java-client')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-data-redis')
 
     // Development
-    compileOnly 'org.projectlombok:lombok'
-
-    // Database
-    implementation('org.mariadb.jdbc:mariadb-java-client')
-    implementation('redis.clients:jedis:3.6.0')
-
-    annotationProcessor 'org.projectlombok:lombok'
-    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
