--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ ext {
     BOT_VERSION = '1.0.0'
     JDA_VERSION = '4.3.0_339'
     ORG_JSON_VERSION = '20190722'
+    EXPIRING_MAP_VERSION = '0.5.10'
 }
 
 version = BOT_VERSION
