--- a/module-automod/build.gradle
+++ b/module-automod/build.gradle
@@ -35,7 +35,7 @@ tasks.named('jar') {
 }
 
 dependencies {
-    api('net.jodah:expiringmap:0.5.10')
+    api("net.jodah:expiringmap:${EXPIRING_MAP_VERSION}")
     api("org.json:json:${ORG_JSON_VERSION}")
 
     // Shared dependencies
@@ -45,8 +45,8 @@ dependencies {
     }
 
     // Spring
-    implementation('org.mariadb.jdbc:mariadb-java-client')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+    implementation('org.springframework.boot:spring-boot-starter')
 
     // Development
     testImplementation('org.springframework.boot:spring-boot-starter-test')
