--- a/module-economy/build.gradle
+++ b/module-economy/build.gradle
@@ -35,7 +35,7 @@ tasks.named('jar') {
 }
 
 dependencies {
-    api('net.jodah:expiringmap:0.5.10')
+    api("net.jodah:expiringmap:${EXPIRING_MAP_VERSION}")
     api("org.json:json:${ORG_JSON_VERSION}")
 
     // Shared Dependencies
@@ -45,10 +45,9 @@ dependencies {
     }
 
     // Spring
-    implementation('redis.clients:jedis:3.6.0')
-    implementation('org.mariadb.jdbc:mariadb-java-client')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-data-redis')
+    implementation('org.springframework.boot:spring-boot-starter')
 
     // Development
     testImplementation('org.springframework.boot:spring-boot-starter-test')
