--- a/module-economy/build.gradle
+++ b/module-economy/build.gradle
@@ -40,7 +40,7 @@ dependencies {
 
     // Shared Dependencies
     implementation project(':common')
-    implementation("net.dv8tion:JDA:${JDA_VERSION}") {
+    implementation("${JDA_SLUG}:${JDA_VERSION}") {
         exclude module: 'opus-java'
     }
 
