--- a/bot/build.gradle
+++ b/bot/build.gradle
@@ -46,7 +46,7 @@ dependencies {
 
     // Shared Dependencies
     implementation project(':common')
-    implementation("net.dv8tion:JDA:${JDA_VERSION}") {
+    implementation("${JDA_SLUG}:${JDA_VERSION}") {
         exclude module: 'opus-java'
     }
     implementation('com.fasterxml.jackson.core:jackson-databind:2.13.1')
