--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 ext {
     BOT_VERSION = '1.0.0'
-    JDA_VERSION = '4.3.0_339'
+    JDA_VERSION = '4.4.0_352'
+    JDA_SLUG = 'net.dv8tion:JDA'
     ORG_JSON_VERSION = '20190722'
     EXPIRING_MAP_VERSION = '0.5.10'
 }
