--- a/module-info/build.gradle
+++ b/module-info/build.gradle
@@ -39,7 +39,7 @@ dependencies {
 
     // Shared dependencies
     implementation project(':common')
-    implementation("net.dv8tion:JDA:${JDA_VERSION}") {
+    implementation("${JDA_SLUG}:${JDA_VERSION}") {
         exclude module: 'opus-java'
     }
 
