--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 ext {
     BOT_VERSION = '1.0.0'
-    JDA_VERSION = '4.4.0_352'
-    JDA_SLUG = 'net.dv8tion:JDA'
+    JDA_VERSION = '0899a4483f'
+    JDA_SLUG = 'com.github.DV8FromtheWorld:JDA'
     ORG_JSON_VERSION = '20190722'
     EXPIRING_MAP_VERSION = '0.5.10'
 }
