Add testing module

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,4 +8,5 @@ include('module-help')
 include('module-info')
 include('module-moderation')
 include('module-nsfw')
+include('module-testing')
 include('module-wiki')
