--- a/bot/build.gradle
+++ b/bot/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation project(':module-moderation')
     implementation project(':module-nsfw')
     implementation project(':module-wiki')
+    implementation project(':module-testing')
     implementation('io.sentry:sentry-logback:5.6.0')
 
     // Shared Dependencies
