--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 ext {
     BOT_VERSION = '1.2.0'
-    JDA_VERSION = '0899a4483f'
+    JDA_VERSION = 'v5.0.0-alpha.9'
     JDA_SLUG = 'com.github.DV8FromtheWorld:JDA'
     ORG_JSON_VERSION = '20190722'
     EXPIRING_MAP_VERSION = '0.5.10'
