--- a/module-wiki/build.gradle
+++ b/module-wiki/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java-library'
-    id 'org.springframework.boot' version '2.5.3'
+    id 'org.springframework.boot' version "${SPRING_VERSION}"
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'io.freefair.lombok' version '6.1.0'
 }
@@ -41,6 +41,7 @@ tasks.named('jar') {
 dependencies {
     api('org.jsoup:jsoup:1.14.3')
     api("org.json:json:${ORG_JSON_VERSION}")
+    api("net.jodah:expiringmap:${EXPIRING_MAP_VERSION}")
 
     // Shared dependencies
     implementation project(':common')
