--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,7 @@ include('module-economy')
 include('module-fun')
 include('module-help')
 include('module-info')
+include('module-legacy')
 include('module-moderation')
 include('module-nsfw')
 include('module-testing')
