--- a/module-legacy/build.gradle
+++ b/module-legacy/build.gradle
@@ -41,7 +41,7 @@ tasks.named('jar') {
 dependencies {
     api('redis.clients:jedis:4.2.1')
     api("org.json:json:${ORG_JSON_VERSION}")
-    api('com.fasterxml.jackson.core:jackson-databind:2.13.1')
+    api("com.fasterxml.jackson.core:jackson-databind:${JACKSON_VERSION}")
 
     // Shared dependencies
     implementation project(':common')
