--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ ext {
     ORG_JSON_VERSION = '20190722'
     EXPIRING_MAP_VERSION = '0.5.10'
     SPRING_VERSION = '2.6.6'
+    JACKSON_VERSION = '2.13.1'
 }
 
 version = BOT_VERSION
