--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 ext {
     BOT_VERSION = '1.2.0'
-    //JDA_VERSION = 'v5.0.0-alpha.9'
-    JDA_VERSION = 'feature~modals-SNAPSHOT'
-    //JDA_SLUG = 'com.github.DV8FromtheWorld:JDA'
-    JDA_SLUG = 'com.github.Xirado:JDA'
+    JDA_VERSION = 'v5.0.0-alpha.11'
+    //JDA_VERSION = 'feature~modals-SNAPSHOT'
+    JDA_SLUG = 'com.github.DV8FromtheWorld:JDA'
+    //JDA_SLUG = 'com.github.Xirado:JDA'
     ORG_JSON_VERSION = '20190722'
     EXPIRING_MAP_VERSION = '0.5.10'
     SPRING_VERSION = '2.6.6'
