Initial point system concept

--- a/settings.gradle
+++ b/settings.gradle
@@ -9,5 +9,6 @@ include('module-info')
 include('module-legacy')
 include('module-moderation')
 include('module-nsfw')
+include('module-points')
 include('module-testing')
 include('module-wiki')
