--- a/module-nsfw/build.gradle
+++ b/module-nsfw/build.gradle
@@ -40,7 +40,7 @@ tasks.named('jar') {
 
 dependencies {
     // Dependencies
-    api('com.github.Kodehawa:imageboard-api:bddeedab56')
+    api('com.github.Kodehawa:imageboard-api:2.5.2')
 
     // Shared dependencies
     implementation project(':common')
