--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,7 @@
 ext {
-    BOT_VERSION = '1.2.0'
-    JDA_VERSION = 'v5.0.0-alpha.11'
-    //JDA_VERSION = 'feature~modals-SNAPSHOT'
-    JDA_SLUG = 'com.github.DV8FromtheWorld:JDA'
-    //JDA_SLUG = 'com.github.Xirado:JDA'
+    BOT_VERSION = '1.3.0'
+    JDA_VERSION = '5.0.0-alpha.13'
+    JDA_SLUG = 'net.dv8tion:JDA'
     ORG_JSON_VERSION = '20190722'
     EXPIRING_MAP_VERSION = '0.5.10'
     SPRING_VERSION = '2.6.6'
