--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,79 +1,59 @@
-name: Docker CI
+name: Release
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    tags:
+      - '*'
 env:
-  IMAGE_NAME: bot
+  IMAGE_NAME: lindseybot/bot
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      # JDK
-      - name: Set up JDK
-        uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
+      - name: Setup JDK
+        uses: actions/setup-java@v3
         with:
+          distribution: 'zulu'
           java-version: 17
-      # Chmod
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      # Build
-      - name: Build with Gradle
+      - name: Setup gradle
+        uses: gradle/gradle-build-action@v2
+      - name: Build with gradle
         run: ./gradlew build
         env:
           USERNAME: ${{ github.actor }}
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # Upload
-      - name: Save Artifacts
-        uses: actions/upload-artifact@v2
-        if: github.event_name == 'push'
-        with:
-          name: bootjar
-          path: bot/build/libs/*.jar
-  docker:
-    runs-on: ubuntu-latest
-    needs: build
-    if: github.event_name == 'push'
-    steps:
-      - uses: actions/checkout@v2
-      # Download
-      - name: Download Artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: bootjar
-          path: bot/build/libs/
-      # Delete artifact
-      - name: Delete artifacts
-        uses: geekyeggo/delete-artifact@v1
-        with:
-          name: bootjar
-      # Build
       - name: Docker Build
         run: docker build ./bot/ --file ./bot/Dockerfile --tag $IMAGE_NAME
-      # Auth
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-      # Push
       - name: Push image
         run: |
-          IMAGE_ID=ghcr.io/lindseybot/$IMAGE_NAME
-
+          IMAGE_ID=ghcr.io/$IMAGE_NAME
+          
           # Change all uppercase to lowercase
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-
+          
           # Strip git ref prefix from version
           VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-
+          
           # Strip "v" prefix from tag name
           [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-
+          
           # Use Docker `latest` tag convention
           [ "$VERSION" == "master" ] && VERSION=latest
-
+          
           echo IMAGE_ID=$IMAGE_ID
           echo VERSION=$VERSION
-
+          echo "RELEASE=$VERSION" >> $GITHUB_ENV
+          
           docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
+      # Sentry
+      - name: Create Sentry release
+        uses: getsentry/action-release@v1
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
+          SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT }}
+        with:
+          version: ${{ env.RELEASE }}
