--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,16 +39,14 @@ jobs:
           # Strip "v" prefix from tag name
           [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
           
-          # Use Docker `latest` tag convention
-          [ "$VERSION" == "master" ] && VERSION=latest
-          
           echo IMAGE_ID=$IMAGE_ID
           echo VERSION=$VERSION
           echo "RELEASE=$VERSION" >> $GITHUB_ENV
           
+          docker tag $IMAGE_NAME $IMAGE_ID:latest
           docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
+          docker push $IMAGE_ID:latest
           docker push $IMAGE_ID:$VERSION
-      # Sentry
       - name: Create Sentry release
         uses: getsentry/action-release@v1
         env:
