--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
           
           echo VERSION=$VERSION
           echo "RELEASE=$VERSION" >> $GITHUB_ENV
-          echo "release=bot@$VERSION" > ./bot/src/main/resources/sentry.properties
+          echo "release=$VERSION" > ./bot/src/main/resources/sentry.properties
       - name: Setup gradle
         uses: gradle/gradle-build-action@v2
       - name: Build with gradle
