--- a/module-legacy/build.gradle
+++ b/module-legacy/build.gradle
@@ -35,10 +35,9 @@ dependencies {
     implementation project(':common')
 
     api('redis.clients:jedis:4.2.1')
-    api("com.fasterxml.jackson.core:jackson-databind:${JACKSON_VERSION}")
+    api('net.sf.trove4j:trove4j:3.0.3')
 
     // Spring
-    implementation('org.springframework.boot:spring-boot-starter-data-redis')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter')
 
